Switch config.java from @Data to java record